fix nav bar on mobile

--- a/index.css
+++ b/index.css
@@ -91,7 +91,7 @@ html {
     width:100%;
   }
 
-  @media only screen and (max-width: 1000px) {
+  @media (max-width:1000px) {
     .text {
       margin-top: 10%;
       margin-right: 10%;
@@ -122,7 +122,7 @@ html {
       margin-bottom: 15%;
     }
 
-  
+
 
     .col-xl-4 {
       margin-bottom: 5%;
@@ -138,7 +138,7 @@ html {
 
     .navbar-brand {
       margin-top: 25px;
-      font-family: 'Mukta', sans-serif;    font-size: 150%;
+      font-family: 'Mukta', sans-serif;    font-size: 200%;
       margin-left: 40px;
     }
 
